--- a/practice-english-app/package.json
+++ b/practice-english-app/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.80.0",
     "ai": "^5.0.89",
     "next": "16.0.1",
     "react": "19.2.0",
